@@ -53,12 +53,11 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-transport-native-epoll</artifactId>
 			<classifier>linux-x86_64</classifier>
-	    </dependency>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 	
@@ -86,6 +85,41 @@
 						</manifest>
 					</archive>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>io.winterframework.tool</groupId>
+				<artifactId>winter-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>winter-package</id>
+						<phase>package</phase>
+						<goals>
+							<goal>build-image-tar</goal>
+						</goals>
+						<configuration>
+							<imageFormat>Docker</imageFormat>
+							<vm>server</vm>
+							<vmOptions>-Xms2G -Xmx2G -XX:+UseNUMA -XX:+UseParallelGC -Dio.netty.leakDetectionLevel=disabled --add-modules io.netty.transport.unix.common,io.netty.transport.epoll</vmOptions>
+						</configuration>
+					</execution>
+					<execution>
+						<id>winter-start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>start</goal>
+						</goals>
+						<configuration>
+							<vmOptions>--add-modules io.netty.transport.unix.common,io.netty.transport.epoll</vmOptions>
+						</configuration>
+					</execution>
+					<execution>
+						<id>winter-stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
